agregando mi portafolio

--- a/cosas_noSabias.html
+++ b/cosas_noSabias.html
@@ -18,8 +18,12 @@
         </div>
         <nav class="header--nav">
             <a class="enlace" href="index.html">Inicio</a>
-            <a class="enlace" href="https://gon-bur-arom.blogspot.com/" target="_blank">Blog</a>
+
             <a class="enlace estasAqui" href="cosas_noSabias.html">Cosas que no Sabias</a>
+
+            <a class="enlace" href="https://gon-bur-arom.blogspot.com/" target="_blank">Blog</a>
+
+            <a  class="enlace" href="https://gonbur.github.io/GonzalesBurgos_Arom/" target="_blank">Mi Portafolio</a>
         </nav>
 
         
