--- a/cosas_noSabias.html
+++ b/cosas_noSabias.html
@@ -10,13 +10,13 @@
 </head>
 <body>
     <!-- HEADER -->
-    <header class="header modificar">
+    <header class="header modificar--header">
         <div class="animacion"></div>
 
         <div class="header--fondo cambioFondo">
             <img class="cambio__logo" src="img/logoCam.png" alt="">
         </div>
-        
+
         <nav class="header--nav">
             <a class="enlace" href="index.html">Inicio</a>
 
